Fixed user creation issues

--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -1,14 +1,14 @@
 server:
-  port: 8080
   host: "localhost"
+  port: 8080
 
 database:
   host: "localhost"
   port: 5432
   user: "postgres"
-  password: "postgres"
-  dbname: "service_monitor"
-  sslmode: "disable"
+  password: "pass123test"
+  name: "service_monitor"
+  ssl_mode: "disable"
 
 redis:
   host: "localhost"
@@ -17,9 +17,9 @@ redis:
   db: 0
 
 twilio:
-  account_sid: "your_account_sid"
-  auth_token: "your_auth_token"
-  from_phone: "+1234567890"
+  account_sid: ""
+  auth_token: ""
+  from_number: ""
 
 jwt:
   secret_key: "your-secret-key"
